# CLDT

./: .checkstyle  .gitignore  .project  README.md  checkstyle-suppressions.xml  pom.xml
bundles/su.softcom.cldt.common/: .project  plugin.xml
bundles/su.softcom.cldt.core/: .project  build.properties  plugin.xml  preferences.ini
bundles/su.softcom.cldt.debug.core.linux/: .project  fragment.xml
bundles/su.softcom.cldt.debug.core.win32/: .project  build.properties  fragment.xml
features/: .project  pom.xml
tests/: .gitignore
tests/su.softcom.cldt.core.tests/resources/TestProjects/Test1/: .gitignore  .project  CMakeLists.txt  README.md
tests/su.softcom.cldt.core.tests/resources/TestProjects/bcvs/MSPO/v1.1/vm6/: CMakeLists.txt  build.bat  build.sh  build2.sh  buildMAKvm6.sh~  configbrd.c  configbrd.h  configos.h.old  dependbrd.h  env.sh  m.sh  m_bin.sh  m_cmp.sh  m_elf.sh  makefile  maketarget.bsp  mcrc_bin.sh  sys_version  usermake.def  usermake.def.old  x_configbrd.h  x_configbrd.h.old  xconfig.sh
tests/su.softcom.cldt.core.tests/resources/TestProjects/bcvs/MSPO/v1.1/vm6/config/: usr401.c  usrBootLine.c  usrBootLine.h  usrFlash.c  usrFtl.c  usrIde.c  usrLpt.c  usrNetwork.c  usrQbus.c  usrRam.c  usrRgb.c  usrScsi.c  usrSerial.c
tests/su.softcom.cldt.core.tests/resources/TestProjects/bcvs/MSPO/v1.1/vm6/src/: CRC.c  CRC.h  DataMSPO.h  DefineMSPO.h  GlobalMSPO.h  InterfaceEthernet.c  InterfaceEthernet.h  InterfaceMKIO.c  InterfaceMKIO.h  InterfaceMRAM.c  InterfaceMRAM.h  InterfaceTLM.c  InterfaceTLM.h  LVD_MSPO.c  MyTimer.c  MyTimer.h  ReaderID.c  ReaderID.h  TransferCoord.c  TransferCoord.h  WorkEtalon.c  WorkEtalon.h  bcvsm.c  versionMSPO.h
(+1766 files in other folders)
