# set minimum cmake version
cmake_minimum_required(VERSION 3.5)

# project name and language
project(all-features-of-static-analysis LANGUAGES CXX)


################################################################################
# Sub-projects
################################################################################
add_subdirectory(src)